[package]
name = "open-clockwork-cli"
version = "0.1.0"
description = "Command line interface for Clockwork"
edition = "2021"
license = "AGPL-3.0-or-later"
homepage = "https://clockwork.xyz"
repository = "https://github.com/open-clockwork/clockwork/cli"
documentation = "https://docs.clockwork.xyz"
readme = "./README.md"
keywords = ["solana"]
build = "build.rs"

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = { features = ["mint", "token"], version = "0.28.0" }
anyhow = "1.0.61"
bincode = "1.3.3"
bzip2 = "0.4"
clap = { version = "3.1.2", features = ["derive"] }
open-clockwork-cron = { path = "../cron", version = "=0.1.0" }
open-clockwork-network-program = { path = "../programs/network", version = "=0.1.0", features = ["no-entrypoint"] }
open-clockwork-relayer-api = { path = "../relayer/api", version = "=0.1.0" }
open-clockwork-plugin-utils= { path = "../plugin/utils", version = "=0.1.0" }
open-clockwork-thread-program = { path = "../programs/thread", version = "=0.1.0", features = ["no-entrypoint"] }
open-clockwork-utils = { path = "../utils", version = "=0.1.0" }
open-clockwork-webhook-program = { path = "../programs/webhook", version = "=0.1.0", features = ["no-entrypoint"] }
chrono = { version = "0.4.19", default-features = false, features = ["alloc"] }
dirs-next = "2.0.0"
indicatif = "0.16"
reqwest = "0.11.14"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serde_yaml = "0.9.4"
solana-account-decoder = "=1.16.12"
solana-client = "=1.16.12"
solana-clap-utils = "=1.16.12"
solana-cli-config = "=1.16.12"
solana-sdk = "=1.16.12"
spl-associated-token-account = "1.1.1"
spl-memo = "4.0.0"
spl-token = "~4.0.0"
tar = "0.4"
thiserror = "1.0.30"
termcolor = "1.2.0"

[[bin]]
name = "clockwork"
path = "src/main.rs"

[build-dependencies]
cargo_metadata = "=0.14.0"
