[package]
name = "open-clockwork-sdk"
version = "0.1.0"
description = "An SDK for building automated programs on Solana"
edition = "2021"
license = "AGPL-3.0-or-later"
homepage = "https://clockwork.xyz"
repository = "https://github.com/open-clockwork/clockwork"
documentation = "https://docs.clockwork.xyz"
readme = "./README.md"
keywords = ["solana"]

[lib]
name = "open_clockwork_sdk"

[dependencies]
anchor-lang = "0.28.0"
chrono = { version = "0.4.19", default-features = false, features = ["alloc"] }
open-clockwork-thread-program = { path = "../programs/thread", features = ["cpi"], version = "=0.1.0" }
nom = "~7"
once_cell = "1.5.2"

[features]
default = []
