[package]
name = "open-clockwork-thread-program"
version = "0.1.0"
description = "Clockwork thread program"
edition = "2021"
license = "AGPL-3.0-or-later"
homepage = "https://clockwork.xyz"
repository = "https://github.com/open-clockwork/clockwork"
documentation = "https://docs.clockwork.xyz"
readme = "./README.md"
keywords = ["solana"]

[lib]
crate-type = ["cdylib", "lib"]
name = "open_clockwork_thread_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
chrono = { version = "0.4.19", default-features = false, features = ["alloc"] }
open-clockwork-cron = { path = "../../cron", version = "=0.1.0" }
open-clockwork-network-program = { path = "../network", features = ["cpi"], version = "=0.1.0" }
open-clockwork-thread-program-v1 = { path = "v1", version = "=0.1.0" }
open-clockwork-utils = { path = "../../utils", version = "=0.1.0" }
pyth-sdk-solana = "0.8.0"
static-pubkey = "1.0.3"
version = "3.0.0"
