[package]
name = "open-clockwork-webhook-program"
version = "0.1.0"
description = "Clockwork webhook program"
edition = "2021"
license = "AGPL-3.0-or-later"
homepage = "https://clockwork.xyz"
repository = "https://github.com/open-clockwork/clockwork"
documentation = "https://docs.clockwork.xyz"
readme = "./README.md"
keywords = ["solana"]

[lib]
crate-type = ["cdylib", "lib"]
name = "open_clockwork_webhook_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { features = ["init-if-needed"], version = "0.28.0" }
open-clockwork-network-program = { path = "../network", features = ["cpi"], version = "=0.1.0" }
open-clockwork-utils = { path = "../../utils", version = "=0.1.0" }
serde = "1.0.152"
