[package]
name = "open-clockwork-thread-program-v1"
version = "0.1.0"
edition = "2021"
readme = "./README.md"
description = "Clockwork thread program v1"
license = "AGPL-3.0-or-later"

[lib]
crate-type = ["cdylib", "lib"]
name = "open_clockwork_thread_program_v1"

[features]
default = ["cpi"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-lang = "0.28.0"
clockwork-anchor-gen = { version = "0.3.2", features = ["compat-program-result"] }
